<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.kk.activity.SetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <ImageView
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/kk_title_back_icon"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="120dp"
            android:text="@string/kk_setActivity_set"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/colorGray"/>
    <TextView
        android:id="@+id/rooom_anim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kk_setActivity_roomAnim"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
       android:background="@color/colorGray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kk_setActivity_warm"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kk_setActivity_tickling"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kk_setActivity_update"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="162dp"
            android:src="@mipmap/kk_my_have_new_version"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
             android:text="@string/kk_setActivity_newVersion"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kk_setActivity_about"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
         android:text="@string/kk_setActivity_login"
        />
</LinearLayout>
