<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.kk.activity.TabActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/tab_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/kk_meshow_me_arrow_icon"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_tab_homepage"
            android:background="@drawable/item1"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="89dp"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_tab_hot"
            android:id="@+id/textView3"
            android:textSize="30sp"
            android:layout_marginRight="31dp"
            android:layout_marginEnd="31dp"
            android:background="@drawable/item1"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_tab_year"
            android:id="@+id/textView4"
            android:background="@drawable/item1"
            android:textSize="30sp"
            android:layout_alignTop="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_tab_youngster"
            android:layout_below="@+id/textView2"
            android:textSize="30sp"
            android:layout_alignLeft="@+id/textView2"
            android:background="@drawable/item1"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="91dp"
            android:id="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_tab_game"
            android:textSize="30sp"
            android:background="@drawable/item1"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

    </RelativeLayout>

</LinearLayout>
