<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@mipmap/kk_me_bg_1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/kk_head_avatar_nosex"

            />

        <TextView
            android:id="@+id/me_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/kk_meFragment_login"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <ImageView
            android:id="@+id/mefragment_about"
            android:layout_width="25dp"
            android:layout_height="25dp"
           android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
             android:background="@mipmap/kk_about"
            />
        <ImageView
            android:id="@+id/me_set_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/kk_set_in"

            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/colorgraiy" />

    <LinearLayout
        android:id="@+id/me_fragment_linear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/kk_me_family_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/kk_meFragment_family"
            android:textSize="15sp" />
        <ImageView
            android:id="@+id/me_family_arrow"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:background="@mipmap/kk_meshow_me_arrow_icon"
            android:layout_marginLeft="280dp"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/colorgraiy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/kk_me_money_img" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/kk_meFragment_mymoney"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/kk_meFragment_firstgift"
            android:textColor="@color/colorOrange" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="55dp"
            android:layout_height="32dp"
            android:background="@drawable/kk_me_bubble"
            android:paddingLeft="9dp"
            android:paddingTop="5dp"
            android:text="@string/kk_meFragment_bubble"
            android:textColor="@color/colorWhite"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mefragment_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kk_me_fill_money_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kk_meFragment_pay" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorGray"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kk_me_show_img"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kk_meFragment_shop" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/colorGray"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/kk_me_task_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kk_meFragment_task" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />
  <android.support.design.widget.TabLayout
      android:id="@+id/mefragment_tb"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/kk_meFragment_noLogin"
        android:gravity="center"
        android:background="@color/colorgraiy"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/mefragment_vp"
        android:layout_width="wrap_content"
        android:layout_height="300dp"/>

</LinearLayout>

    </ScrollView>

</LinearLayout>
